--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,37 +8,14 @@
     tools:context=".view.activity.MainActivity">
 
 
-
-<!--    <com.google.android.material.floatingactionbutton.FloatingActionButton-->
-<!--        android:id="@+id/fab_setting"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_marginBottom="16dp"-->
-<!--        android:layout_marginEnd="16dp"-->
-<!--        android:layout_marginStart="16dp"-->
-<!--        android:clickable="true"-->
-<!--        android:focusable="true"-->
-<!--        android:foreground="?android:attr/selectableItemBackground"-->
-<!--        android:src="@drawable/ic_settings_white_24dp"-->
-<!--        app:backgroundTint="@color/colorAccent"-->
-<!--        app:elevation="5dp"-->
-<!--        app:fabSize="normal"-->
-<!--        app:layout_constraintBottom_toBottomOf="parent"-->
-<!--        app:layout_constraintHorizontal_bias="1.0"-->
-<!--        app:layout_constraintLeft_toLeftOf="parent"-->
-<!--        app:layout_constraintRight_toRightOf="parent"-->
-<!--        app:layout_constraintTop_toTopOf="@+id/rv_main"-->
-<!--        app:layout_constraintVertical_bias="0.9"-->
-<!--        />-->
-
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView1"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintTop_toTopOf="parent"
 
-        app:layout_constraintHeight_percent="0.5"
-        app:layout_constraintVertical_bias="0.5"
+        app:layout_constraintHeight_percent="0.2"
+
 
         android:clickable="true"
         android:focusable="true"
@@ -47,40 +24,46 @@
         android:layout_margin="8dp"
         >
 
-
-        <TextView
-            android:id="@+id/personal_info"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:paddingTop="@dimen/default_title_indicator_top_padding"
-            android:paddingLeft="@dimen/default_title_indicator_top_padding"
-            android:textColor="@color/standardWhite"
-            android:background="@color/colorIntroLightPrimary"
-            android:textSize="@dimen/text_size_xl"
-            android:text="@string/person_info"
-            />
+            android:orientation="vertical">
 
-<!--        测试yolo-->
-        <androidx.appcompat.widget.SwitchCompat
-            android:id="@+id/yolo_test"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="60dp"
-            android:text="yolo_test" />
+            <!-- 欢迎 -->
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
 
+                android:gravity="bottom"
+                android:background="@color/colorIntroLightPrimary"
+                android:orientation="horizontal">
 
+                <TextView
+                    android:id="@+id/welcome"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:paddingTop="@dimen/default_title_indicator_top_padding"
+                    android:paddingLeft="@dimen/default_title_indicator_top_padding"
+                    android:textColor="@color/standardWhite"
+                    android:textSize="@dimen/text_size_xl"
+                    android:text="@string/welcome_person" />
+            </LinearLayout>
+        </LinearLayout>
     </androidx.cardview.widget.CardView>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_main"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintHeight_percent="0.5"
+        android:layout_weight="0.8"
+
+        app:layout_constraintTop_toBottomOf="@id/cardView1"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0" />
+        android:background="@color/material_red"
+        />
+<!--    android:background="@color/material_red"-->
+<!--    android:layout_height="0dp"-->
+<!--    app:layout_constraintHeight_percent="0.8"-->
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
