--- a/app/src/main/res/layout/activity_new_main.xml
+++ b/app/src/main/res/layout/activity_new_main.xml
@@ -1,89 +1,27 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical">
+    android:id="@+id/root_layout">
 
-    <androidx.cardview.widget.CardView
-        android:id="@+id/cardView1"
-        android:layout_width="0dp"
+    <com.google.android.material.tabs.TabLayout
+        android:id="@+id/tab_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:tabMode="fixed"
+        app:tabGravity="fill"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <androidx.viewpager.widget.ViewPager
+        android:id="@+id/view_pager"
+        android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintTop_toTopOf="parent"
-
-        app:layout_constraintHeight_percent="0.5"
-        app:layout_constraintVertical_bias="0.5"
-
-        android:clickable="true"
-        android:focusable="true"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_margin="8dp"
-        >
+        app:layout_constraintHeight_percent="0.9"
+        app:layout_constraintTop_toBottomOf="@id/tab_layout"
+        />
 
 
-        <TextView
-            android:id="@+id/personal_info"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:paddingTop="@dimen/default_title_indicator_top_padding"
-            android:paddingLeft="@dimen/default_title_indicator_top_padding"
-            android:textColor="@color/standardWhite"
-            android:background="@color/colorIntroLightPrimary"
-            android:textSize="@dimen/text_size_xl"
-            android:text="@string/person_info"
-            />
-
-        <!--        测试yolo-->
-        <androidx.appcompat.widget.SwitchCompat
-            android:id="@+id/yolo_test"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="60dp"
-            android:text="yolo_test" />
-
-
-    </androidx.cardview.widget.CardView>
-
-    <androidx.cardview.widget.CardView
-        android:id="@+id/cardView2"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        app:layout_constraintTop_toTopOf="parent"
-
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHeight_percent="0.5"
-        app:layout_constraintVertical_bias="1.0"
-
-        android:clickable="true"
-        android:focusable="true"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_margin="8dp"
-        >
-
-
-        <TextView
-            android:id="@+id/setting_info"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:paddingTop="@dimen/default_title_indicator_top_padding"
-            android:paddingLeft="@dimen/default_title_indicator_top_padding"
-            android:textColor="@color/standardWhite"
-            android:background="@color/colorIntroLightPrimary"
-            android:textSize="@dimen/text_size_xl"
-            android:text="@string/setting_info"
-            />
-
-        <!--        float_switch-->
-        <androidx.appcompat.widget.SwitchCompat
-            android:id="@+id/float_switch"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="60dp"
-            android:text="float_switch" />
-
-
-    </androidx.cardview.widget.CardView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
