--- a/app/src/main/res/layout/layout_rv_item_main.xml
+++ b/app/src/main/res/layout/layout_rv_item_main.xml
@@ -5,15 +5,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
 
-    android:layout_height="match_parent"
-    app:layout_constraintHeight_percent="0.5"
-    app:layout_constraintVertical_bias="0.5"
+    android:layout_height="wrap_content"
+
+
 
     android:layout_margin="8dp"
 
     android:clickable="true"
     android:focusable="true"
-    android:foreground="?android:attr/selectableItemBackground">
+
+    >
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/cl_item"
@@ -28,10 +29,69 @@
             android:layout_height="match_parent"
             tools:scaleType="centerCrop"
             tools:src="@drawable/pic_cow_main"
-            app:layout_constraintHorizontal_bias="0.0"
+
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
+
+        <!--        精灵启动开关-->
+
+        <androidx.appcompat.widget.SwitchCompat
+            android:id="@+id/sw_select"
+
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+
+            android:layout_marginTop="@dimen/activity_vertical_margin"
+
+            android:orientation="vertical"
+            android:text="@string/switch_start"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+
+            />
+
+
+
+
+        <TextView
+            android:id="@+id/tv_title_item"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_marginBottom="16dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginStart="24dp"
+            android:layout_marginTop="16dp"
+            android:gravity="center"
+            android:textColor="@color/standardWhite"
+            android:textSize="@dimen/text_size_xxxl"
+            android:textStyle="italic"
+            app:layout_constraintTop_toBottomOf="@id/sw_select"
+            app:layout_constraintStart_toStartOf="parent"
+            tools:text="Item" />
+
+        <TextView
+            android:id="@+id/tv_description"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_marginStart="16dp"
+            android:ellipsize="end"
+            android:maxLines="1"
+            android:textColor="@color/standardWhite"
+            android:textSize="@dimen/text_size_xl"
+            app:layout_constraintBottom_toBottomOf="@+id/tv_title_item"
+            app:layout_constraintLeft_toRightOf="@+id/tv_title_item"
+            app:layout_constraintTop_toTopOf="@+id/tv_title_item"
+            tools:text="this is description " />
+
+
+
 
         <!--单选按钮-->
         <RadioGroup
@@ -41,7 +101,9 @@
             android:orientation="vertical"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tv_description"
+            android:layout_margin="@dimen/activity_vertical_margin"
+
             >
 
             <RadioButton
@@ -108,54 +170,7 @@
             android:text="请选择一个选项"
             />
 
-        <TextView
-            android:id="@+id/tv_title_item"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="16dp"
-            android:layout_marginEnd="16dp"
-            android:layout_marginStart="24dp"
-            android:layout_marginTop="16dp"
-            android:gravity="center"
-            android:textColor="@color/standardWhite"
-            android:textSize="@dimen/text_size_xxxl"
-            android:textStyle="italic"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="1.0"
-            tools:text="Item" />
 
-        <TextView
-            android:id="@+id/tv_description"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:ellipsize="end"
-            android:maxLines="1"
-            android:textColor="@color/standardWhite"
-            android:textSize="@dimen/text_size_xl"
-            app:layout_constraintBottom_toBottomOf="@+id/tv_title_item"
-            app:layout_constraintLeft_toRightOf="@+id/tv_title_item"
-            app:layout_constraintTop_toTopOf="@+id/tv_title_item"
-            tools:text="this is description " />
-
-<!--        精灵启动开关-->
-        <androidx.appcompat.widget.SwitchCompat
-            android:id="@+id/sw_select"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="24dp"
-            android:layout_marginStart="16dp"
-            app:layout_constraintHorizontal_bias="1.0"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintBottom_toBottomOf="@+id/tv_description"
-            app:layout_constraintTop_toTopOf="@+id/tv_description"
-            android:text="@string/switch_start"
-            app:layout_constraintVertical_bias="0.0" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
